<?xml version="1.0" encoding="utf-8"?>
<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/original_size"
        android:id="@+id/original_size"
        android:contentDescription="@string/original_size"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/fit"
        android:id="@+id/fit"
        android:contentDescription="@string/fit"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/zoom_in"
        android:id="@+id/zoom_in"
        android:contentDescription="@string/zoom_in"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/zoom_out"
        android:id="@+id/zoom_out"
        android:contentDescription="@string/zoom_out"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/check_selector"
        android:id="@+id/check"
        android:contentDescription="@string/check"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/erase_selector"
        android:id="@+id/erase"
        android:contentDescription="@string/erase"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/clean_up"
        android:id="@+id/clean_up"
        android:contentDescription="@string/clean_up"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/export_checks"
        android:id="@+id/export_checks"
        android:contentDescription="@string/export_checks"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/import_checks"
        android:id="@+id/import_checks"
        android:contentDescription="@string/import_checks"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_manage"
        android:id="@+id/settings"
        android:contentDescription="@string/settings"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:scaleType="centerInside"
        android:src="@drawable/info"
        android:id="@+id/info"
        android:contentDescription="@string/info"/>

</GridLayout>

